# APi2GraphQL_with_Actix

./: .env  Cargo.toml  README.md  cargo.toml
learn_actix/: Cargo.toml  app.db
learn_actix/migrations/2022-09-18-194626_links/: down.sql  up.sql
learn_actix/src/: main.rs
learn_actix/src/api/: task.rs
learn_actix/src/app/: index.html
learn_actix/src/app/assets/: style.css
learn_actix/src/modules/: old_task.rs
learn_actix/src/repository/: Model.rs  dbConnect.rs  mod.rs  schema.rs
orm_diesel/: Cargo.toml
orm_diesel/migrations/2022-09-23-124446_create_projects/: up.sql
orm_diesel/src/: lib.rs  model.rs  schema.rs
orm_diesel/src/query/: Project.rs  mod.rs
src/: main.rs
src/api/: task.rs
src/app/: index.html
src/modules/: aboutMe.rs  mod.rs  old_task.rs
