[package]
name = "learn_actix"
version = "0.1.0"
edition = "2021"
default-run = "learn_actix"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-web = "4"
actix-cors = "0.6.3"
json = "0.12.4"
serde = {version = "1.0" , features = ["derive"]}
uuid = {version = "^0.8",features = ["v4"]}
aws-config = "^0.8"
aws-sdk-dynamodb = "^0.8"
env_logger = "0.8"
log = "^0.4"
strum_macros = "^0.24"
strum = {version = "^0.24",features = ["derive"]}
derive_more = "^0.99"
orm_diesel = {path="../orm_diesel"}
