[package]
name = "orm_diesel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "1.4.4",features = ["mysql"]}
dotenv = "0.15.0"
serde_json = "1.0.1"
serde = {version = "1.0" , features = ["derive"]}